# QENS

./: .readthedocs.yaml  CONTRIBUTING.md  Notebook.ipynb  Notebook_app.ipynb  QENS_Analysis.ipynb  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
Notebook/: QENS_Analysis_file.ipynb  QENS_Analysis_file_v2.ipynb
archive/: gui.py  qens_terminal.py  quens_single_file_gui.py
data/: benzene_260_360_inc.nxspe  benzene_290_124_coh.nxspe  benzene_290_124_inc.nxspe  benzene_290_197_coh.nxspe  benzene_290_197_inc.nxspe  benzene_290_360_coh.nxspe  benzene_290_360_inc.nxspe  benzene_290_861_coh.nxspe  benzene_290_861_inc.nxspe  empty_360_inc.nxspe
docs/: api.rst  conf.py  config.rst  custom_models.rst  index.rst  installation.rst  models.rst  pipeline.rst  quickstart.rst  usage_classical.rst
docs/_static/: custom.css
docs/_themes/my_scientific_theme/: layout.html  theme.conf
docs/_themes/my_scientific_theme/static/: my_theme.css
docs/api/: config.rst  fitting.rst  index.rst  io.rst  models.rst  plotting.rst  preprocessing.rst  sampling.rst
qens/: __init__.py  config.py  constants.py  fitting.py  io.py  plotting.py  preprocessing.py  sampling.py
qens/models/: __init__.py  forward.py  lineshapes.py  registry.py  rotation.py  translation.py
