[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qens"
version = "0.1.0"
description = "Bayesian QENS analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
mcmc = ["emcee>=3.1"]
dev  = ["pytest>=7", "pytest-cov", "ruff>=0.4"]

[project.scripts]
qens-analyse = "run_analysis:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qens*"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
addopts       = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

[tool.coverage.run]
source = ["qens"]
omit   = ["tests/*"]
